# spark_flow

./: README.md  dashboad_2K59KYVUE.zpln  pyproject.toml
dags/: pyspark_movie.py
data/movie/hive/load_dt=20150101/multiMovieYn=N/repNationCd=F/: .part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet.crc  part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet
data/movie/hive/load_dt=20150101/multiMovieYn=N/repNationCd=K/: .part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet.crc  part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet
data/movie/hive/load_dt=20150101/multiMovieYn=Y/repNationCd=F/: .part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet.crc  part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet
data/movie/hive/load_dt=20150101/multiMovieYn=Y/repNationCd=K/: .part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet.crc  part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet
data/movie/hive/load_dt=20150101/multiMovieYn=Y/repNationCd=__HIVE_DEFAULT_PARTITION__/: .part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet.crc  part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet
data/movie/hive/load_dt=20150101/multiMovieYn=__HIVE_DEFAULT_PARTITION__/repNationCd=K/: .part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet.crc  part-00000-81b76f15-d2fc-4025-b59f-902e01f8b080.c000.snappy.parquet
note/: dashboad.ipynb
pyspark/: agg_movie.py  join_df.py
src/spark_flow/: .re.py.swp
tests/: test_re.py
(+4744 files in other folders)
